# mtuci-fullstack

./: PROJECT_OVERVIEW.md  README.md  task.txt
backend/: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  test.py
backend/fastapi-application/: .env.template  alembic.ini  create_fastapi_app.py  main.py
backend/fastapi-application/alembic/versions/: 2024_05_09_2202-4810a9cdb58d_create_users_table.py  2024_05_09_2206-ed30a8f17cf4_update_users_table.py  2026_03_25_1242-eb58833c473a_update_user_schema.py  2026_04_06_1724-e02e4b4f8e1e_full_schema_v2.py
backend/fastapi-application/api/api_v1/: __init__.py  analyses.py  auth.py  repositories.py  users.py
backend/fastapi-application/core/: ai_scorer.py  config.py  dependencies.py  security.py
backend/fastapi-application/core/github_parser/: parser.py
backend/fastapi-application/core/models/: __init__.py  analysis.py  base.py  db_helper.py  repository.py  user.py
backend/fastapi-application/core/schemas/: __init__.py  analysis.py  repository.py  user.py
backend/fastapi-application/crud/: __init__.py  analyses.py  repositories.py  users.py
backend/tests/: test_utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/mocks/: index.ts
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  LoginPage.tsx  NewRepositoryPage.tsx  RegisterPage.tsx  RepositoryPage.tsx
frontend/src/styles/: common.ts
frontend/src/types/: index.ts
